crates/language-v2/tests/src/fail/p1_definitions/duplicate_variant_name/test.stderr
error: A variant referencing 'Baz1' already exists.
  --> src/fail/p1_definitions/duplicate_variant_name/test.rs:22:53
   |
22 | ...                   EnumVariant(reference = Baz1)
   |                                               ^^^^
